--- a/template/dl.html
+++ b/template/dl.html
@@ -156,15 +156,15 @@
 
 
             <div class="copyright ">
-                <h5 class="text-center">Copyright © 2023 <a href="https://t.me/ultroidxTeam"><span
-                            style="font-weight: 700;">HP</span></a>. All
+                <h5 class="text-center">Copyright © 2023 <a href="https://t.me/filmytak"><span
+                            style="font-weight: 700;">FILMYTAK</span></a>. All
                     Rights Reserved.</h5>
                 <div class="icons">
                     <a href="https://github.com/"><i class="fa-brands fa-github fa-lg"></i></a>
                     <a href="https://t.me/filmytak"><i class="fa-brands fa-telegram fa-lg"></i></a>
                 </div>
                 <h4 style="font-weight: 700;">This Page Is Designed By <a
-                        href="https://t.me/primetgx"><span>HP</span></a></h4>
+                        href="https://t.me/primetgx"><span>FILMYTAK</span></a></h4>
             </div>
         </footer>
 </body>
