--- a/template/req.html
+++ b/template/req.html
@@ -153,14 +153,14 @@
 
             <div class="copyright ">
                 <h5 class="text-center">Copyright © 2023-24 <a href="https://t.me/filmytak"><span
-                            style="font-weight: 700;">HP</span></a>. All
+                            style="font-weight: 700;">FILMYTAK</span></a>. All
                     Rights Reserved.</h5>
                 <div class="icons">
                     <a href="https://github.com/"><i class="fa-brands fa-github fa-lg"></i></a>
                     <a href="https://t.me/filmytak"><i class="fa-brands fa-telegram fa-lg"></i></a>
                 </div>
                 <h4 style="font-weight: 700;">This Page Is Designed By <a
-                        href="https://t.me/filmytak"><span>Blank</span></a></h4>
+                        href="https://t.me/filmytak"><span>FILMYTAK</span></a></h4>
             </div>
         </footer>
 </body>
